<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view">

        <RelativeLayout
            android:layout_width="328dp"
            android:layout_height="208dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/grey_rectangle_shape">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <TextView
            android:id="@+id/itemName"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:lineHeight="24sp"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="Apple" />

        <LinearLayout
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineHeight="24sp"
                android:textColor="@color/main_green"
                android:textSize="24sp"
                tools:text="Apple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:lineHeight="24sp"
                android:text="@string/forOne"
                android:textColor="@color/main_green"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/infoAboutItem"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:lineHeight="24sp"
            android:textColor="@color/grey"
            android:textSize="16sp"
            tools:text="Apple" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey2"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/addWithCount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/priceForCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineHeight="24sp"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:text="587" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:lineHeight="24sp"
                        android:text="@string/tjs"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/icNegative"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/round_shape"
                        android:src="@drawable/ic_negative" />

                    <TextView
                        android:id="@+id/tvItemCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="26dp"
                        android:layout_marginEnd="26dp"
                        android:textSize="18sp"
                        tools:text="1" />

                    <ImageView
                        android:id="@+id/icPositive"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/round_shape"
                        android:src="@drawable/ic_posetive" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRequest"
                android:layout_width="328dp"
                android:layout_height="54dp"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/main_green"
                android:text="@string/make_request"
                android:visibility="gone"
                app:cornerRadius="16dp" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>