<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="12dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/basket_card"
        android:layout_width="328dp"
        android:layout_height="94dp"
        android:background="#F8F8F8"
        android:clipToOutline="true"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llImage"
                android:layout_width="98dp"
                android:layout_height="86dp"
                android:layout_gravity="start|center"
                android:layout_margin="4dp"
                android:background="@drawable/image_shape">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:src="@drawable/ic_launcher_background" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:id="@+id/icDelete"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/icon_sahpe"
                    android:padding="4dp"
                    android:src="@drawable/trash_02" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/llImage"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/itemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textFontWeight="500"
                    android:textSize="14sp"
                    tools:text="Name" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="@color/grey"
                        android:textFontWeight="500"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:textColor="@color/grey"
                        android:textFontWeight="500"
                        android:textSize="12sp"
                        tools:text="500" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:text="@string/forOne"
                        android:textColor="@color/grey"
                        android:textFontWeight="500"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/llImage"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/llTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTotalPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/main_green"
                        android:textFontWeight="700"
                        android:textSize="20sp"
                        tools:text="500" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tjs"
                        android:textColor="@color/main_green"
                        android:textFontWeight="700"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="53dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivNegative"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:padding="2dp"
                        android:background="@drawable/round_shape"
                        android:src="@drawable/ic_negative" />

                    <TextView
                        android:id="@+id/tvCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:lineHeight="18sp"
                        android:textColor="@color/black"
                        android:textFontWeight="500"
                        android:textSize="20sp"
                        tools:text="2" />

                    <ImageView
                        android:id="@+id/ivPositive"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:padding="2dp"
                        android:background="@drawable/round_shape"
                        android:src="@drawable/ic_posetive" />

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>